--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="D:/用户目录/Documents/GitHub/ChatSockets/javax.servlet-3.0.0.v201112011016-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
