Progress so far: server to coordinator and client to coordinator are functional

--- a/src/coordinator_version/Coordinator_Folder/masterlist.properties
+++ b/src/coordinator_version/Coordinator_Folder/masterlist.properties
@@ -1,3 +1,3 @@
-file1:1418485903966|ADDED|server1|server2|server3
-file2:1418485903466|DELETED|server1|server2|server3
-file3:1418485901966|ADDED|server2|server3
+#Wed Dec 17 12:57:47 CST 2014
+file1=1418787890865|ADDED|127.0.0.1-50
+file9=1418787470780|ADDED|127.0.0.1-50
