--- a/src/coordinator_version/Coordinator_Folder/masterlist.properties
+++ b/src/coordinator_version/Coordinator_Folder/masterlist.properties
@@ -1,4 +1,4 @@
-c2file2=0|DELETED
-c2file1=10|DELETED
-c1file2=6|DELETED
-c1file1=12|DELETED
+c1file2=1418951627394|UPDATED|127.0.0.1-50
+c1file1=1418951627419|UPDATED|127.0.0.1-50
+c2file1=1418951628476|UPDATED|127.0.0.1-50
+c2file2=1418951628701|UPDATED|127.0.0.1-50
